Gh-2841: Update Spotbugs (#2842)
* Fix Spotbugs and add PMD

* Fix random objects that were created and used only once

* Methods with Boolean return value should not return Null
Note that these methods are unused and can likely be removed

* Fix unclosed streams

* Fix wrog newline char in String format

* Fix unused return value

* Remove uses of default charset

* Correctness fixes

* Remove unused redundant variable

* Field shouldn't be static

* Missing equals()

* Fix improper confusing use of instanceof
It appears that if addingView is null then merging is possible unless srcView is nonnull

* Remove redundant null checks

* Remove redundant call which has no effect and simplify

* Fix redundant and inefficiant use of String constructor

* Fix inefficient use of keySet iterator instead of entrySet iterator

* Remvoe unused fields

* Add missing synchronized

* Checkstyle fixes

* Revert "Missing equals()"

This reverts commit 3a07e3e78403a273493c3c796212c37f0ec4b1ad.

* Make final static field array an unmodifiableList instead

* Remove deprecated and unused methods from ITs

* Fix unchecked cast

* Add SpotBugs supressions for expected behaviour and false positives

* Set public fields that are not used outsdie their class to private

* Use unmodifiable views for public fields

* CSV fixes for fields and JSON Serialisation annotation

* Should not concatenate strings using + in a loop, instead use builder

* Update Spotbugs Config

* Tidy up POM

* Fix wrong method used

* Tidy versions for reports plugins

* Fix use of non Java 8 method

* Use version property

* Fix remaining issues with integration-test module

* intended behaviour or false positives

* Requiring further investigation

* Revert change to serialisation
Returning a copy of ObjectMapper fails tests and a copy cannot be used - at least not without a significant refactor

* Checkstyle fixes

* Checkstyle change